log
Thu 16 May 2024 04:18:20 PM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:23: error: ‘y’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   68 |       adj->sudo[x][y] = i;
      |       ~~~~~~~~~~~~~~~~^~~
sudoku.c:68:23: error: ‘x’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
cc1: all warnings being treated as errors
Compilation failed
57680f3
Thu 16 May 2024 04:19:58 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
0853ea1
Thu 16 May 2024 04:22:21 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
60aa30f
Thu 16 May 2024 04:28:48 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:13: error: ‘i0’ undeclared (first use in this function); did you mean ‘i’?
   59 |             i0 = i;
      |             ^~
      |             i
sudoku.c:59:13: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:60:13: error: ‘j0’ undeclared (first use in this function); did you mean ‘j’?
   60 |             j0 = j;
      |             ^~
      |             j
Compilation failed
6865ac5
Thu 16 May 2024 04:29:02 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:14: error: redefinition of ‘i0’
   55 |    int i0=-1,i0=-1;
      |              ^~
sudoku.c:55:8: note: previous definition of ‘i0’ with type ‘int’
   55 |    int i0=-1,i0=-1;
      |        ^~
sudoku.c:60:13: error: ‘j0’ undeclared (first use in this function); did you mean ‘j’?
   60 |             j0 = j;
      |             ^~
      |             j
sudoku.c:60:13: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:66:7: error: ‘x’ undeclared (first use in this function)
   66 |    if(x!=-1&&y!=-1){
      |       ^
sudoku.c:66:14: error: ‘y’ undeclared (first use in this function)
   66 |    if(x!=-1&&y!=-1){
      |              ^
Compilation failed
2db4c90
